Fix z index neg values flicker on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@ html, body, #root {
 #vid-overlay{
   position: absolute;
   top: 0;
-  z-index: -5;
   min-width: 100%;
   min-height: 100%;
   background-color: black;
@@ -26,7 +25,6 @@ video {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -10;
 }
 
 @keyframes MainTitle {
@@ -86,6 +84,7 @@ video {
   height: 100%;
   display: flex;
   justify-content: center;
+  z-index: 1;
 }
 
 #cont{
@@ -112,7 +111,6 @@ video {
   text-align: center;
   font-size: 72px;
   font-weight: bold;
-  
 }
 
 @media only screen and (max-width: 600px) {
